--- a/package.json
+++ b/package.json
@@ -12,5 +12,13 @@
   },
   "author": "",
   "license": "MIT",
-  "homepage": "https://github.com/cobysy"
+  "homepage": "https://github.com/cobysy",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.4.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-uglify": "^3.0.1",
+    "merge-stream": "^1.0.1"
+  }
 }
